# -RustixOS

./: .gitignore  BUILD.gn  Cargo.toml  Makefile  Makefile.simple  README.md  build.rs  create_iso.sh  linker.ld  run.sh  x86_64-rustix.json  x86_64.ld
.cargo/: config.toml
.openhands/: TASKS.md
src/: allocator.rs  allocator_stub.rs  boot.rs  filesystem.rs  filesystem_stub.rs  gdt.rs  gdt_stub.rs  interrupts.rs  interrupts_stub.rs  keyboard.rs  main.rs  memory.rs  memory_stub.rs  multiboot_header.asm  process.rs  process_stub.rs  serial.rs  syscalls.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/aarch64/: boot.rs  cpu.rs  exception.rs  gic.rs  memory.rs  mod.rs  psci.rs  timer.rs
src/arch/aarch64/boot/: boot.s
src/arch/arm/: interrupts.rs  memory.rs  mod.rs  timer.rs
src/arch/x86/: interrupts.rs  memory.rs  mod.rs
src/arch/x86_64/: mod.rs
src/boot/: early_print.rs  mod.rs  multiboot.rs  multiboot_header.asm
src/bootloader/: mod.rs
src/shell/: mod.rs
src/shell/commands/: filesystem.rs  mod.rs  wifi.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
