[package]
name = "rustix-kernel"
version = "0.1.0"
edition = "2021"
authors = ["RustixOS Team"]

[dependencies]
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"
conquer-once = { version = "0.2", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[target.x86_64-unknown-none.dependencies]
multiboot = { version = "0.8.0", default-features = false }
uart_16550 = "0.2"
